# gpt-pr-review-bot

./: .dockerignore  .env.example  .gitignore  .gpt-pr-bot.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  demo.py  dockerfile  main.py  pyproject.toml
.github/workflows/: ci.yml  pr-review.yml  pull_request_template.md
app/: cli_review.py  config_loader.py  demo_bad.py  diff_slimmer.py  file_filters.py  inline_mapper.py  main.py  review_strategy.py  rulepacks.py  settings.py  trigger_20250830_001947.py  unsafe_demo_20250830_004107.py  unsafe_demo_20250830_005012.py  unsafe_demo_20250830_010135.py
app/services/: github.py  github_reviews.py  llm.py
tests/: test_cli_review.py  test_config_and_batch.py  test_filter_and_gate.py  test_health.py  test_inline_review.py  test_metrics_and_labels.py  test_report.py
tools/: ci_status.py  ci_summary.py
